--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -49,7 +49,7 @@
           </li>
         }
 
-        @if(this.authService.isAdmin())
+        @if(this.authService.isAdmin() || this.authService.isOrganizador())
         {
           <li class="nav-item">
             <a class="nav-link nav-pill-item me-2" 
