--- a/src/app/components/equipo/equipo.component.html
+++ b/src/app/components/equipo/equipo.component.html
@@ -12,7 +12,7 @@
         </div>
     </header>
 
-    @if(this.authService.isAdmin() || this.authService.isOrganizador() || isCapitan) {
+    @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan) {
         <div class="actions-toolbar">
             <button class="btn-secondary-action" (click)="verInscritos()">
                 <i class="bi bi-people"></i> <span>Ver Inscritos</span>
@@ -33,7 +33,7 @@
             @for (equipo of equipos; track equipo.idEquipo) {
                 <article class="team-card">
 
-                    @if(this.authService.isAdmin() || this.authService.isOrganizador() || isCapitan){
+                    @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan){
                         <button class="btn-delete-card" title="Eliminar equipo" (click)="abrirModalEliminar(equipo.idEquipo)">
                             <i class="bi bi-trash"></i>
                         </button>
@@ -445,7 +445,7 @@
                             </div>
                         </div>
 
-                        @if(this.authService.isAdmin() || this.authService.isOrganizador() || isCapitan){
+                        @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan){
                             <button class="btn-delete-color" title="Expulsar del equipo" (click)="eliminarMiembroDeEquipo(miembro.idMiembroEquipo)">
                                 <i class="bi bi-trash"></i>
                             </button>
@@ -463,7 +463,7 @@
         </div>
         
         <div class="modal-footer footer-form">
-            @if(this.authService.isAdmin() || this.authService.isOrganizador() || isCapitan){
+            @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan){
                 <form class="add-color-form" #miembrosForm="ngForm">
                 <div class="input-wrapper w-100">
                     <i class="bi bi-person-plus input-icon"></i>
