cambio foto login

--- a/src/app/auth/components/loginComponent/loginComponent.html
+++ b/src/app/auth/components/loginComponent/loginComponent.html
@@ -2,7 +2,7 @@
   <div class="login-card">
     
     <div class="login-image-side">
-      <img src="images/imagenLogin.png" alt="Deportes Tajamar">
+      <img src="images/imagenDelLogin.png" alt="Deportes Tajamar">
       <div class="overlay"></div>
     </div>
 
