web terminada parcialmente

--- a/src/app/components/home.component/home.component.html
+++ b/src/app/components/home.component/home.component.html
@@ -231,7 +231,7 @@
 
   <!-- Two Column Layout (Top) + Calendar (Bottom) -->
   <div class="professional-layout">
-       @if(authservices.isAdmin() || organizadorService.esOrganizador()){
+       @if(authservices.isAdmin() || isOrganizador){
      <button class="btn-crear-evento" (click)="abrirModalCrearEvento()">
       <i class="bi bi-plus-circle me-2"></i>
       Crear Evento
