--- a/src/app/components/equipo/equipo.component.html
+++ b/src/app/components/equipo/equipo.component.html
@@ -445,7 +445,7 @@
                             </div>
                         </div>
 
-                        @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan){
+                        @if(this.authService.isAdmin() || isCapitan){
                             <button class="btn-delete-color" title="Expulsar del equipo" (click)="eliminarMiembroDeEquipo(miembro.idMiembroEquipo)">
                                 <i class="bi bi-trash"></i>
                             </button>
@@ -463,7 +463,7 @@
         </div>
         
         <div class="modal-footer footer-form">
-            @if(this.authService.isAdmin() || organizadorService.esOrganizador() || isCapitan){
+            @if(this.authService.isAdmin() || isCapitan){
                 <form class="add-color-form" #miembrosForm="ngForm">
                 <div class="input-wrapper w-100">
                     <i class="bi bi-person-plus input-icon"></i>
